--- a/LanguageBuilder/LanguageBuilder.csproj
+++ b/LanguageBuilder/LanguageBuilder.csproj
@@ -206,20 +206,26 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\WordsController.cs" />
+    <Compile Include="Controllers\StudentsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201608122101060_initial.cs" />
-    <Compile Include="Migrations\201608122101060_initial.Designer.cs">
-      <DependentUpon>201608122101060_initial.cs</DependentUpon>
+    <Compile Include="Migrations\201608141445521_initial.cs" />
+    <Compile Include="Migrations\201608141445521_initial.Designer.cs">
+      <DependentUpon>201608141445521_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201608141600129_newtry.cs" />
+    <Compile Include="Migrations\201608141600129_newtry.Designer.cs">
+      <DependentUpon>201608141600129_newtry.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\DictWord.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Words.cs" />
+    <Compile Include="Models\Student.cs" />
+    <Compile Include="Models\UserWord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -283,11 +289,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Words\Create.cshtml" />
-    <Content Include="Views\Words\Delete.cshtml" />
-    <Content Include="Views\Words\Details.cshtml" />
-    <Content Include="Views\Words\Edit.cshtml" />
-    <Content Include="Views\Words\Index.cshtml" />
+    <Content Include="Views\Students\Create.cshtml" />
+    <Content Include="Views\Students\Delete.cshtml" />
+    <Content Include="Views\Students\Details.cshtml" />
+    <Content Include="Views\Students\Edit.cshtml" />
+    <Content Include="Views\Students\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -301,8 +307,11 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201608122101060_initial.resx">
-      <DependentUpon>201608122101060_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201608141445521_initial.resx">
+      <DependentUpon>201608141445521_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608141600129_newtry.resx">
+      <DependentUpon>201608141600129_newtry.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
