--- a/LanguageBuilder/LanguageBuilder.csproj
+++ b/LanguageBuilder/LanguageBuilder.csproj
@@ -204,6 +204,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DictWordsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\StudentsController.cs" />
@@ -294,6 +295,11 @@
     <Content Include="Views\Students\Details.cshtml" />
     <Content Include="Views\Students\Edit.cshtml" />
     <Content Include="Views\Students\Index.cshtml" />
+    <Content Include="Views\DictWords\Create.cshtml" />
+    <Content Include="Views\DictWords\Delete.cshtml" />
+    <Content Include="Views\DictWords\Details.cshtml" />
+    <Content Include="Views\DictWords\Edit.cshtml" />
+    <Content Include="Views\DictWords\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
