--- a/LanguageBuilder/LanguageBuilder.csproj
+++ b/LanguageBuilder/LanguageBuilder.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Migrations\201608141600129_newtry.Designer.cs">
       <DependentUpon>201608141600129_newtry.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201608161711278_newdomain3.cs" />
+    <Compile Include="Migrations\201608161711278_newdomain3.Designer.cs">
+      <DependentUpon>201608161711278_newdomain3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -324,6 +328,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201608141600129_newtry.resx">
       <DependentUpon>201608141600129_newtry.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608161711278_newdomain3.resx">
+      <DependentUpon>201608161711278_newdomain3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
