--- a/LanguageBuilder/LanguageBuilder.csproj
+++ b/LanguageBuilder/LanguageBuilder.csproj
@@ -204,7 +204,6 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\DictWords1Controller.cs" />
     <Compile Include="Controllers\DictWordsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -260,6 +259,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="manifest.json" />
+    <None Include="Properties\PublishProfiles\superhosting.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -321,11 +321,6 @@
     <Content Include="Views\UserWords\Edit.cshtml" />
     <Content Include="Views\UserWords\Index.cshtml" />
     <Content Include="Views\UserWords\Review.cshtml" />
-    <Content Include="Views\DictWords1\Create.cshtml" />
-    <Content Include="Views\DictWords1\Delete.cshtml" />
-    <Content Include="Views\DictWords1\Details.cshtml" />
-    <Content Include="Views\DictWords1\Edit.cshtml" />
-    <Content Include="Views\DictWords1\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
